try getting PR title

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,18 +14,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Fetch PR title
-        id: get_pr_title
-        run: |
-          PR_TITLE=$(curl -s -H "Accept: application/vnd.github.v3+json" \
-                     -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                     "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}" \
-                     | jq -r '.title')
-          echo "PR_TITLE=$PR_TITLE" >> $GITHUB_ENV
+        env:
+          TITLE: ${{ github.event.pull_request.title }}
 
       - name: Create a file with PR title
         run: |
-          FILENAME="$(date +"%Y-%m-%d_%H-%M-%S")_${{ env.PR_TITLE }}.txt"
-          echo "This file was created for PR: ${{ env.PR_TITLE }}" > "${FILENAME}"
+          FILENAME="$(date +"%Y-%m-%d_%H-%M-%S")_${{ env.TITLE }}.txt"
+          echo "This file was created for PR: ${{ env.TITLE }}" > "${FILENAME}"
           echo "Created file: ${FILENAME}"
 
       # - name: Setup Go
