--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Fetch PR title
         env:
           TITLE: ${{ github.event.pull_request.title }}
+        run: echo The Title of your PR is $TITLE
 
       - name: Create a file with PR title
         run: |
