--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,13 @@
 name: CI 
 
+# on:
+#   push:
+#     branches:
+#       - main
+
 on:
-  push:
-    branches:
-      - main
+  pull_request:
+    types: [opened, synchronize, reopened]
 jobs:
   tests:
     name: Tests
@@ -12,38 +16,66 @@ jobs:
       - name: Checkout out code
         uses: actions/checkout@v4
 
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.22'
-      
-      - name: Check format
-        run: test -z $(go fmt ./...) 
-
-      - name: Install staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
-      
-      - name: Run staticcheck
-        run: staticcheck ./...
-
-      - name: Install gosec
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
-      
-      - name: Run gosec
-        run: gosec ./...
-      
-      - name: Run test
-        run: go test ./... -cover
-
-      - name: Run benchmark and write to file
-        run:  |
-          FILENAME="performance/$(date +"%Y-%m-%d_%H-%M-%S")_${GITHUB_SHA}.txt"
-          go test ./... -bench=. -count=1 -benchmem -run '^#' > tee "${FILENAME}"
-
-      - name: Commit and push the 
+      - name: Print Event Information
         run: |
-          git config --global user.name 'ci'
-          git config --global user.email 'jf550-kent@users.noreply.github.com'
-          git add .
-          git commit -m "Record performance for ${FILENAME}"
-          git push
+          echo "Event Name: ${{ github.event_name }}"
+          echo "Repository: ${{ github.repository }}"
+          echo "Actor: ${{ github.actor }}"
+          echo "Commit SHA: ${{ github.sha }}"
+          echo "Ref: ${{ github.ref }}"
+          echo "Head Ref: ${{ github.head_ref }}"
+          echo "Base Ref: ${{ github.base_ref }}"
+          echo "Run ID: ${{ github.run_id }}"
+          echo "Run Number: ${{ github.run_number }}"
+
+      - name: Get PR Commit Info
+        id: pr-info
+        run: |
+          PR_COMMIT=$(jq -r .pull_request.head.sha "$GITHUB_EVENT_PATH")
+          PR_TITLE=$(jq -r .pull_request.title "$GITHUB_EVENT_PATH")
+          PR_BODY=$(jq -r .pull_request.body "$GITHUB_EVENT_PATH")
+          PR_USER=$(jq -r .pull_request.user.login "$GITHUB_EVENT_PATH")
+          echo "PR_COMMIT=$PR_COMMIT" >> $GITHUB_ENV
+          echo "PR_TITLE=$PR_TITLE" >> $GITHUB_ENV
+          echo "PR_BODY=$PR_BODY" >> $GITHUB_ENV
+          echo "PR_USER=$PR_USER" >> $GITHUB_ENV
+          echo "The commit SHA for this PR is $PR_COMMIT"
+          echo "The title of this PR is $PR_TITLE"
+          echo "The body of this PR is $PR_BODY"
+          echo "The user who created this PR is $PR_USER"
+
+      # - name: Setup Go
+      #   uses: actions/setup-go@v5
+      #   with:
+      #     go-version: '1.22'
+      
+      # - name: Check format
+      #   run: test -z $(go fmt ./...) 
+
+      # - name: Install staticcheck
+      #   run: go install honnef.co/go/tools/cmd/staticcheck@latest
+      
+      # - name: Run staticcheck
+      #   run: staticcheck ./...
+
+      # - name: Install gosec
+      #   run: go install honnef.co/go/tools/cmd/staticcheck@latest
+      
+      # - name: Run gosec
+      #   run: gosec ./...
+      
+      # - name: Run test
+      #   run: go test ./... -cover
+
+      # - name: Run benchmark and write to file
+      #   run:  |
+      #     FILENAME="performance/$(date +"%Y-%m-%d_%H-%M-%S")_${GITHUB_SHA}.txt"
+      #     go test ./... -bench=. -count=1 -benchmem -run '^#' > tee "${FILENAME}"
+
+      # - name: Commit and push the 
+      #   run: |
+      #     git config --global user.name 'ci'
+      #     git config --global user.email 'jf550-kent@users.noreply.github.com'
+      #     git add .
+      #     git commit -m "Record performance for ${FILENAME}"
+      #     git push
