--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,39 +26,39 @@ jobs:
         id: get-title
         run: echo "$PR_TITLE"
 
-      # - name: Setup Go
-      #   uses: actions/setup-go@v5
-      #   with:
-      #     go-version: '1.22'
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
       
-      # - name: Check format
-      #   run: test -z $(go fmt ./...) 
+      - name: Check format
+        run: test -z $(go fmt ./...) 
 
-      # - name: Install staticcheck
-      #   run: go install honnef.co/go/tools/cmd/staticcheck@latest
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
       
-      # - name: Run staticcheck
-      #   run: staticcheck ./...
+      - name: Run staticcheck
+        run: staticcheck ./...
 
-      # - name: Install gosec
-      #   run: go install honnef.co/go/tools/cmd/staticcheck@latest
+      - name: Install gosec
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
       
-      # - name: Run gosec
-      #   run: gosec ./...
+      - name: Run gosec
+        run: gosec ./...
       
-      # - name: Run test
-      #   run: go test ./... -cover
+      - name: Run test
+        run: go test ./... -cover
 
-      # - name: Run benchmark and write to file
-      #   run:  |
-      #     PR_TITLE=$(jq -r .pull_request.title "$GITHUB_EVENT_PATH")
-      #     FILENAME="performance/$($PR_TITLE)/$(date +"%Y-%m-%d_%H-%M-%S").txt"
-      #     go test ./... -bench=. -count=1 -benchmem -run '^#' > tee "${FILENAME}"
+      - name: Run benchmark and write to file
+        run:  |
+          PR_TITLE=$(jq -r .pull_request.title "$GITHUB_EVENT_PATH")
+          FILENAME="performance/$($PR_TITLE)/$(date +"%Y-%m-%d_%H-%M-%S").txt"
+          go test ./... -bench=. -count=1 -benchmem -run '^#' > tee "${FILENAME}"
 
-      # - name: Commit and push the 
-      #   run: |
-      #     git config --global user.name 'ci'
-      #     git config --global user.email 'jf550-kent@users.noreply.github.com'
-      #     git add .
-      #     git commit -m "Record performance for ${FILENAME}"
-      #     git push
+      - name: Commit and push the 
+        run: |
+          git config --global user.name 'ci'
+          git config --global user.email 'jf550-kent@users.noreply.github.com'
+          git add .
+          git commit -m "Record performance for ${FILENAME}"
+          git push
