--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,4 +48,4 @@ jobs:
           git config --global user.email 'jf550-kent@users.noreply.github.com'
           git add .
           git commit -m "Record performance for ${FILENAME}"
-          git push
+          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/jf550-kent/jsgo.git temp_branch:main
