--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,54 +1,72 @@
-name: CI 
-
-on:
-  push:
-    branches:
-      - main
-      
+name: Push commit
+on: push
 permissions:
   contents: write
-
 jobs:
-  tests:
-    name: Tests
+  report:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout out code
-        uses: actions/checkout@v4
-
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.22.4'
-      
-      - name: Check format
-        run: test -z $(go fmt ./...) 
-
-      - name: Install staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
-      
-      - name: Run staticcheck
-        run: staticcheck ./...
-      
-      - name: Run test
-        run: go test ./... -cover
-      
-      - name: Get PR Title 
-        id: pr-title
+      - uses: actions/checkout@v3
+      - name: Create report file
+        run: date +%s > report.txt
+      - name: Commit report
         run: |
-          PR_TITLE=$(jq -r .pull_request.title "$GITHUB_EVENT_PATH")
-          echo "PR_TITLE=$PR_TITLE" >> $GITHUB_ENV
+          git config --global user.name 'Your Name'
+          git config --global user.email 'your-username@users.noreply.github.com'
+          git commit -am "Automated report"
+          git push
 
-      - name: Run benchmark and write to file
-        run:  |
-          PR_TITLE=$(jq -r .pull_request.title "$GITHUB_EVENT_PATH")
-          FILENAME="performance/$($PR_TITLE)-$(date +"%Y-%m-%d_%H-%M-%S").txt"
-          go test ./... -bench=. -count=1 -benchmem -run '^#' > tee "${FILENAME}"
+# name: CI 
 
-      - name: Commit and push the 
-        run: |
-          git config --global user.name 'ci'
-          git config --global user.email 'jf550-kent@users.noreply.github.com'
-          git add .
-          git commit -m "Record performance for ${FILENAME}"
-          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/jf550-kent/jsgo.git temp_branch:main
+# on:
+#   push:
+#     branches:
+#       - main
+      
+# permissions:
+#   contents: write
+
+# jobs:
+#   tests:
+#     name: Tests
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout out code
+#         uses: actions/checkout@v4
+
+#       - name: Setup Go
+#         uses: actions/setup-go@v5
+#         with:
+#           go-version: '1.22.4'
+      
+#       - name: Check format
+#         run: test -z $(go fmt ./...) 
+
+#       - name: Install staticcheck
+#         run: go install honnef.co/go/tools/cmd/staticcheck@latest
+      
+#       - name: Run staticcheck
+#         run: staticcheck ./...
+      
+#       - name: Run test
+#         run: go test ./... -cover
+      
+#       - name: Get PR Title 
+#         id: pr-title
+#         run: |
+#           PR_TITLE=$(jq -r .pull_request.title "$GITHUB_EVENT_PATH")
+#           echo "PR_TITLE=$PR_TITLE" >> $GITHUB_ENV
+
+#       - name: Run benchmark and write to file
+#         run:  |
+#           PR_TITLE=$(jq -r .pull_request.title "$GITHUB_EVENT_PATH")
+#           FILENAME="performance/$($PR_TITLE)-$(date +"%Y-%m-%d_%H-%M-%S").txt"
+#           go test ./... -bench=. -count=1 -benchmem -run '^#' > tee "${FILENAME}"
+
+#       - name: Commit and push the 
+#         run: |
+#           git config --global user.name 'ci'
+#           git config --global user.email 'jf550-kent@users.noreply.github.com'
+#           git add .
+#           git commit -m "Record performance for ${FILENAME}"
+#           git push https://${{ secrets.GITHUB_TOKEN }}@github.com/jf550-kent/jsgo.git temp_branch:main
