--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,10 @@ jobs:
         run: date +%s > report.txt
       - name: Commit report
         run: |
-          git config --global user.name 'Your Name'
-          git config --global user.email 'your-username@users.noreply.github.com'
-          git commit -am "Automated report"
+          git config --global user.name 'jf550'
+          git config --global user.email 'jf550-kent@users.noreply.github.com'
+          git add -A
+          git commit -m "Automated report"
           git push
 
 # name: CI 
