--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,9 @@ jobs:
         run:  |
           PR_TITLE=$(jq -r .pull_request.title "$GITHUB_EVENT_PATH")
           FILENAME="performance/$($PR_TITLE)-$(date +"%Y-%m-%d_%H-%M-%S").txt"
-          go test ./... -bench=. -count=1 -benchmem -run '^#' > tee "${FILENAME}"
+          echo FILENAME
+          echo "FILENAME=$FILENAME" >> $GITHUB_ENV
+          go test ./... -bench=. -count=1 -benchmem -run '^#' > "${FILENAME}"
 
       - name: Commit and push the 
         run: |
