--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,22 +17,13 @@ jobs:
           go-version: '1.22.4'
       
       - name: Check format
-        run: test -z $(go fmt ./...) 
-
-      - name: Install staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
-      
-      - name: Run staticcheck
-        run: staticcheck ./...
-      
-      - name: Run test
-        run: go test ./... -cover
+        run: test -z $(go fmt ./...)
 
       - name: Run benchmark and write to file
         run:  |
           FILENAME="performance/$(date +"%Y-%m-%d_%H-%M-%S").txt"
           echo "FILENAME=$FILENAME" >> $GITHUB_ENV
-          go test ./... -bench=. -count=30 -benchmem -run '^#' > "${FILENAME}"
+          go test ./... -bench=. -benchmem -run '^#' > "${FILENAME}"
 
       - name: Commit and push the 
         run: |
